crates/service/tests/diagnostics/snapshots/features__diagnostics__packing__array_get.snap
---
source: crates/service/tests/diagnostics/packing.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 6,
          "character": 14
        },
        "end": {
          "line": 6,
          "character": 16
        }
      },
      "severity": 1,
      "code": "packing",
      "source": "wat",
      "message": "array `$a` is packed",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 6,
                "character": 4
              },
              "end": {
                "line": 6,
                "character": 13
              }
            }
          },
          "message": "use `array.get_s` or `array.get_u` instead"
        }
      ]
    }
  ]
}
