crates/service/tests/diagnostics/snapshots/features__diagnostics__packing__struct_get_u.snap
---
source: crates/service/tests/diagnostics/packing.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 5,
          "character": 20
        },
        "end": {
          "line": 5,
          "character": 21
        }
      },
      "severity": 1,
      "code": "packing",
      "source": "wat",
      "message": "field `0` is unpacked",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 5,
                "character": 4
              },
              "end": {
                "line": 5,
                "character": 16
              }
            }
          },
          "message": "use `struct.get` instead"
        }
      ]
    }
  ]
}
